# Codem

./: .gitignore  AGENTS.md  README.md  index.html  install.sh  package-lock.json  package.json  repository.md  tsconfig.json
.github/workflows/: build.yml  macos.yml
electron/: main.cjs  preload.cjs  usage.cjs
macos/: Package.swift
macos/Sources/CodemMac/: main.swift
scripts/: claude-codem-statusline.js
src/: extension.ts  main.ts  metadata.json  styles.css  stylesheet.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  usage.rs
src/core/: constants.ts  format.ts  types.ts  usage.ts
