[package]
name = "codem"
version = "0.1.0"
description = "Cross-platform Codex usage meter"
authors = ["jinmiles"]
edition = "2021"

[lib]
name = "codem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codem"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["time"] }
